# redi

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
docs/: Building.md  Tutorial.md
examples/: CMakeLists.txt  main.cpp
examples/hello_redi/: main.cpp
examples/mutate_builder/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/cmake/: Config.cmake.in
lib/src/: CMakeLists.txt
lib/src/redi/: BuildDirector.ixx  BuildableEntry.ixx  BuildableEntryBase.ixx  BuildableEntryBuilder.ixx  BuildableEntryBuilderBase.ixx  CMakeLists.txt  ConfigurationEntry.ixx  CyclicDependencyDetected.ixx  DependencyChainNode.cxx  DependencyChainNode.ixx  EntryBase.ixx  EntryBuilderBase.ixx  EntryBuilderContainer.cxx  EntryBuilderContainer.ixx  EntryBuilderFailedError.ixx  EntryInjectionContainer.cxx  EntryInjectionContainer.ixx  ErasedEntry.ixx  Registry.ixx  RegistryBuilder.cxx  RegistryBuilder.ixx  ReverseDependencyChainNode.cxx  ReverseDependencyChainNode.ixx  configuration_entry_c.ixx  entry_builder_c.ixx  entry_c.ixx  redi.cppm  represents_entry_builder_dependency_c.ixx  represents_entry_dependency_c.ixx  strip_dependency_t.ixx
lib/src/redi/util/: CMakeLists.txt  LifeCycleEraseMechanism.ixx  ScopeFail.ixx  TypeList.ixx  any_cast.ixx  contract_macros.hpp  contracts.cxx  contracts.ixx  for_each.ixx  reflection.ixx  util.cppm
lib/src/redi/util/concepts/: CMakeLists.txt  concepts.cppm  decayed.ixx  function.ixx  function_pointer.ixx  function_reference.ixx  invocable_n_r.ixx  member_function_pointer.ixx  nothrow_assignable_from.ixx  nothrow_constructible_from.ixx  nothrow_convertible_to.ixx  nothrow_movable.ixx  nothrow_move_constructible.ixx  specialization_of.ixx  storable.ixx  strips_to.ixx  unambiguous_explicit_functor.ixx  unambiguous_functor.ixx  unambiguous_implicit_functor.ixx  unambiguous_static_functor.ixx  unambiguously_invocable.ixx
lib/src/redi/util/containers/: Any.ixx  CMakeLists.txt  CopyableAny.ixx  CopyableFunction.ixx  Function.impl.hpp  Function.ixx  GenericStack.ixx  MoveOnlyAny.ixx  MoveOnlyFunction.ixx  OptionalRef.ixx  SmallBuffer.ixx  containers.cppm
lib/src/redi/util/type_traits/: CMakeLists.txt  Signature.ixx  arguments_of.ixx  const_like.ixx  forward_like.ixx  result_of.ixx  type_list_drop_front.ixx  type_list_front.ixx  type_traits.cppm
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt
tests/src/redi/: CMakeLists.txt  RegistryBuilder.cpp
tests/src/redi/util/: CMakeLists.txt
tests/src/redi/util/containers/: Any.cpp  CMakeLists.txt  Function.cpp  OptionalRef.cpp
tests/src/redi/util/type_traits/: CMakeLists.txt  type_list_drop_front.cpp
